--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-480.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-480.less
@@ -264,6 +264,21 @@
 			background: url(../images/ico-plus-20.png) no-repeat 99.5% 1px #0030a0;
 		}
 	}
+	
+	body.mp{
+		.panels-flexible-column-first{
+			.pane-node-field-ceo{
+			    width: 100%;
+			    padding-left: 10px;
+			}
+			.pane-node-field-country.mp-country{
+				.field-item{
+					padding-top: 0;
+					padding-left: 10px;
+				}
+ 			}
+		}
+	}
 
 }
 
