--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -3204,6 +3204,25 @@ div.workbench-info-block {
   font-style: normal;
   color: #FFF;
 }
+body.mp .pane-node-field-pledge {
+  background: url('../images/background-fop.png') no-repeat;
+  background-size: cover;
+  margin-top: 1em;
+  border-radius: 15px;
+  margin-bottom: 1em;
+}
+body.mp .pane-node-field-pledge .pane-title {
+  color: #FFF;
+  font-size: 1.4em;
+  padding-left: 20px;
+  padding-top: 15px;
+  font-style: normal;
+}
+body.mp .pane-node-field-pledge .pane-content {
+  padding: 10px 20px 20px 20px;
+  font-style: normal;
+  color: #FFF;
+}
 .panels-flexible-row .hwc-share-widget {
   float: right;
 }
@@ -3221,7 +3240,7 @@ div.workbench-info-block {
   border-radius: 7px;
 }
 .field-name-field-general-phone {
-  padding-top: 10px;
+  padding-top: 5px;
 }
 .field-name-field-website a {
   font-weight: bold !important;
@@ -3283,10 +3302,6 @@ div.workbench-info-block {
 }
 .panels-flexible-region .pane-node-field-ph-address {
   padding-top: 1em;
-}
-.panels-flexible-region .pane-node-field-general-phone,
-.panels-flexible-region .pane-node-field-organisation-rep {
-  padding-top: 10px;
 }
 .panels-flexible-region .pane-node-field-general-phone .pane-title,
 .panels-flexible-region .pane-node-field-organisation-rep .pane-title {
@@ -3528,12 +3543,143 @@ body.ocp .box-type-partner .pane-node-field-quote {
   clear: both;
   padding-left: 10px;
 }
-body.ocp .panels-flexible-row-partner_detail-16-inside .panels-flexible-region-first,
+body.ocp .panels-flexible-row-partner_detail-16-inside .panels-flexible-region-first {
+  float: right;
+  padding-right: 0;
+}
+body.ocp .pane-node-field-orgtype .pane-title {
+  float: left;
+  text-transform: uppercase;
+  border: 2px solid #d9e996;
+  border-radius: 5px;
+  padding: 3px 8px;
+  color: #003399;
+  font-weight: 600;
+  margin-right: 10px;
+  margin-bottom: 10px;
+}
+body.ocp .pane-node-field-orgtype .pane-content {
+  float: left;
+  color: #333;
+}
+body.ocp .pane-node-field-orgtype .pane-content .field-name-field-orgtype {
+  padding-top: 4px;
+  font-weight: normal;
+}
+body.ocp .pane-node-field-bussines-sector {
+  float: right;
+  padding-top: 0 !important;
+  margin-right: 2em;
+  clear: none;
+  display: flex;
+  flex-wrap: nowrap;
+}
+body.ocp .pane-node-field-bussines-sector .pane-title {
+  float: left;
+  text-transform: uppercase;
+  border: 2px solid #d9e996;
+  border-radius: 5px;
+  padding: 3px 8px;
+  color: #003399;
+  font-weight: 600;
+  margin-right: 10px;
+  display: flex;
+  align-items: center;
+}
+body.ocp .pane-node-field-bussines-sector .pane-content {
+  float: left;
+  color: #333;
+}
+body.ocp .pane-node-field-bussines-sector .pane-content .field-type-taxonomy-term-reference {
+  padding-top: 4px;
+  font-weight: normal;
+}
+body.ocp .panels-flexible-column-first .field-name-field-country img {
+  border: 0;
+  width: 110px;
+  height: 110px;
+  margin-top: -17px;
+}
+body.ocp .panels-flexible-column-first .pane-node-field-mission-statement,
+body.ocp .panels-flexible-column-first .pane-node-field-pledge {
+  background: transparent;
+  background-size: initial;
+  margin-top: 0;
+  border-radius: 15px;
+  margin-bottom: 0;
+}
+body.ocp .panels-flexible-column-first .pane-node-field-mission-statement .pane-title,
+body.ocp .panels-flexible-column-first .pane-node-field-pledge .pane-title {
+  float: none;
+  color: #003399;
+  font-weight: 500;
+  font-size: 1.5em;
+  padding: 0 0 10px 0;
+}
+body.ocp .panels-flexible-column-first .pane-node-field-mission-statement .pane-content,
+body.ocp .panels-flexible-column-first .pane-node-field-pledge .pane-content {
+  padding: 1em;
+  padding-left: 1em;
+  padding-right: 1em;
+  font-style: normal;
+  color: #000;
+  padding: 0;
+}
+body.ocp .panels-flexible-column-first .pane-node-field-mission-statement {
+  margin: 2rem 0 2rem 10px;
+}
+body.ocp .panels-flexible-column-last .pane-node-field-country {
+  padding: 1rem 0;
+  display: flex;
+}
+body.ocp .panels-flexible-column-last .pane-node-field-website .field-type-link-field a {
+  font-style: normal;
+  width: auto;
+}
+body.ocp .panels-flexible-column-last .pane-node-field-website .field-type-link-field a[target="_blank"]:after {
+  background-image: url(../images/target-blank.png);
+  background-size: 1rem 1rem;
+  display: inline-block;
+  width: 1rem;
+  height: 1rem;
+  content: "";
+  left: 0.5rem;
+  position: relative;
+}
+body.ocp .panels-flexible-column-last .pane-node-title-field,
+body.ocp .panels-flexible-column-last .pane-node-title {
+  margin-top: 1.8rem;
+}
+body.ocp .panels-flexible-column-last .pane-node-field-general-phone {
+  padding: 0;
+}
+body.ocp .panels-flexible-column-last .pane-node-field-general-phone .pane-title {
+  float: none;
+  padding: 0;
+  font-weight: normal;
+}
+body.ocp .panels-flexible-column-last .pane-node-field-general-phone .pane-content {
+  float: none;
+  padding: 0;
+}
+body.ocp .panels-flexible-column-last .field-name-title-field {
+  font-weight: normal;
+}
+body.ocp .panels-flexible-column-last .pane-node-field-ph-address {
+  padding-top: 0;
+}
+body.ocp .panels-flexible-column-last .pane-node-field-country {
+  padding: 0;
+}
+body.ocp .panels-flexible-column-last .pane-node-field-country .field-name-field-country {
+  padding: 0;
+  font-size: 1.4rem;
+  color: #000;
+}
 body.mp .panels-flexible-row-partner_detail-16-inside .panels-flexible-region-first {
   float: right;
   padding-right: 0;
 }
-body.ocp .pane-node-field-orgtype .pane-title,
 body.mp .pane-node-field-orgtype .pane-title {
   float: left;
   text-transform: uppercase;
@@ -3545,17 +3691,14 @@ body.mp .pane-node-field-orgtype .pane-title {
   margin-right: 10px;
   margin-bottom: 10px;
 }
-body.ocp .pane-node-field-orgtype .pane-content,
 body.mp .pane-node-field-orgtype .pane-content {
   float: left;
   color: #333;
 }
-body.ocp .pane-node-field-orgtype .pane-content .field-name-field-orgtype,
 body.mp .pane-node-field-orgtype .pane-content .field-name-field-orgtype {
   padding-top: 4px;
   font-weight: normal;
 }
-body.ocp .pane-node-field-bussines-sector,
 body.mp .pane-node-field-bussines-sector {
   float: right;
   padding-top: 0 !important;
@@ -3564,7 +3707,6 @@ body.mp .pane-node-field-bussines-sector {
   display: flex;
   flex-wrap: nowrap;
 }
-body.ocp .pane-node-field-bussines-sector .pane-title,
 body.mp .pane-node-field-bussines-sector .pane-title {
   float: left;
   text-transform: uppercase;
@@ -3577,69 +3719,28 @@ body.mp .pane-node-field-bussines-sector .pane-title {
   display: flex;
   align-items: center;
 }
-body.ocp .pane-node-field-bussines-sector .pane-content,
 body.mp .pane-node-field-bussines-sector .pane-content {
   float: left;
   color: #333;
 }
-body.ocp .pane-node-field-bussines-sector .pane-content .field-type-taxonomy-term-reference,
 body.mp .pane-node-field-bussines-sector .pane-content .field-type-taxonomy-term-reference {
   padding-top: 4px;
   font-weight: normal;
 }
-body.ocp .panels-flexible-column-first .field-name-field-country img,
 body.mp .panels-flexible-column-first .field-name-field-country img {
   border: 0;
   width: 110px;
   height: 110px;
   margin-top: -17px;
 }
-body.ocp .panels-flexible-column-first .pane-node-field-mission-statement,
-body.mp .panels-flexible-column-first .pane-node-field-mission-statement,
-body.ocp .panels-flexible-column-first .pane-node-field-pledge,
-body.mp .panels-flexible-column-first .pane-node-field-pledge {
-  background: transparent;
-  background-size: initial;
-  margin-top: 0;
-  border-radius: 15px;
-  margin-bottom: 0;
-}
-body.ocp .panels-flexible-column-first .pane-node-field-mission-statement .pane-title,
-body.mp .panels-flexible-column-first .pane-node-field-mission-statement .pane-title,
-body.ocp .panels-flexible-column-first .pane-node-field-pledge .pane-title,
-body.mp .panels-flexible-column-first .pane-node-field-pledge .pane-title {
-  float: none;
-  color: #003399;
-  font-weight: 500;
-  font-size: 1.5em;
-  padding: 0 0 10px 0;
-}
-body.ocp .panels-flexible-column-first .pane-node-field-mission-statement .pane-content,
-body.mp .panels-flexible-column-first .pane-node-field-mission-statement .pane-content,
-body.ocp .panels-flexible-column-first .pane-node-field-pledge .pane-content,
-body.mp .panels-flexible-column-first .pane-node-field-pledge .pane-content {
-  padding: 1em;
-  padding-left: 1em;
-  padding-right: 1em;
-  font-style: normal;
-  color: #000;
-  padding: 0;
-}
-body.ocp .panels-flexible-column-first .pane-node-field-mission-statement,
-body.mp .panels-flexible-column-first .pane-node-field-mission-statement {
-  margin: 2rem 0 2rem 10px;
-}
-body.ocp .panels-flexible-column-last .pane-node-field-country,
 body.mp .panels-flexible-column-last .pane-node-field-country {
   padding: 1rem 0;
   display: flex;
 }
-body.ocp .panels-flexible-column-last .pane-node-field-website .field-type-link-field a,
 body.mp .panels-flexible-column-last .pane-node-field-website .field-type-link-field a {
   font-style: normal;
   width: auto;
 }
-body.ocp .panels-flexible-column-last .pane-node-field-website .field-type-link-field a[target="_blank"]:after,
 body.mp .panels-flexible-column-last .pane-node-field-website .field-type-link-field a[target="_blank"]:after {
   background-image: url(../images/target-blank.png);
   background-size: 1rem 1rem;
@@ -3650,40 +3751,31 @@ body.mp .panels-flexible-column-last .pane-node-field-website .field-type-link-f
   left: 0.5rem;
   position: relative;
 }
-body.ocp .panels-flexible-column-last .pane-node-title-field,
 body.mp .panels-flexible-column-last .pane-node-title-field,
-body.ocp .panels-flexible-column-last .pane-node-title,
 body.mp .panels-flexible-column-last .pane-node-title {
   margin-top: 1.8rem;
 }
-body.ocp .panels-flexible-column-last .pane-node-field-general-phone,
 body.mp .panels-flexible-column-last .pane-node-field-general-phone {
   padding: 0;
 }
-body.ocp .panels-flexible-column-last .pane-node-field-general-phone .pane-title,
 body.mp .panels-flexible-column-last .pane-node-field-general-phone .pane-title {
   float: none;
   padding: 0;
   font-weight: normal;
 }
-body.ocp .panels-flexible-column-last .pane-node-field-general-phone .pane-content,
 body.mp .panels-flexible-column-last .pane-node-field-general-phone .pane-content {
   float: none;
   padding: 0;
 }
-body.ocp .panels-flexible-column-last .field-name-title-field,
 body.mp .panels-flexible-column-last .field-name-title-field {
   font-weight: normal;
 }
-body.ocp .panels-flexible-column-last .pane-node-field-ph-address,
 body.mp .panels-flexible-column-last .pane-node-field-ph-address {
   padding-top: 0;
 }
-body.ocp .panels-flexible-column-last .pane-node-field-country,
 body.mp .panels-flexible-column-last .pane-node-field-country {
   padding: 0;
 }
-body.ocp .panels-flexible-column-last .pane-node-field-country .field-name-field-country,
 body.mp .panels-flexible-column-last .pane-node-field-country .field-name-field-country {
   padding: 0;
   font-size: 1.4rem;
@@ -7894,31 +7986,6 @@ body.mp .panels-flexible-column-first .pane-node-field-ceo {
 body.mp .panels-flexible-column-first .pane-node-field-ceo .pane-title {
   padding-right: 1.5rem;
   font-weight: bold;
-}
-body.mp .panels-flexible-column-first .pane-node-field-mission-statement,
-body.mp .panels-flexible-column-first .pane-node-field-pledge {
-  background: transparent;
-  background-size: initial;
-  margin-top: 5px;
-  border-radius: 15px;
-  margin-bottom: 1em;
-}
-body.mp .panels-flexible-column-first .pane-node-field-mission-statement .pane-title,
-body.mp .panels-flexible-column-first .pane-node-field-pledge .pane-title {
-  float: none;
-  color: #003399;
-  font-weight: 600;
-  font-size: 1.5em;
-  padding: 0 0 10px 0;
-}
-body.mp .panels-flexible-column-first .pane-node-field-mission-statement .pane-content,
-body.mp .panels-flexible-column-first .pane-node-field-pledge .pane-content {
-  padding: 1em;
-  padding-left: 1em;
-  padding-right: 1em;
-  font-style: normal;
-  color: #000;
-  padding: 0;
 }
 body.mp .panels-flexible-column-first .pane-node-field-mission-statement {
   margin: 2rem 0 2rem 10px;
