--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -3594,7 +3594,7 @@ div.workbench-info-block{
 	}
 }
 
-.page-campaign-partners-campaign-media-partners, .page-campaign-partners-enterprise-europe-network{
+.page-national-focal-points, .page-campaign-partners-campaign-media-partners, .page-campaign-partners-enterprise-europe-network{
 
 	.view-id-partners_list .view-header{
 		width: 100%;
@@ -3616,7 +3616,6 @@ div.workbench-info-block{
 
 	.col-md-2.col-sm-3.col-xs-6{
 		min-height: auto !important;
-		display: block;
     	justify-content: center;
     	display: flex;
 	}
@@ -3638,6 +3637,13 @@ div.workbench-info-block{
 		}
 	}
 }
+.page-national-focal-points{
+	.view-content{
+		display: flex;
+		flex-wrap: wrap;
+	}
+}
+
 
 
 /* PANELS - National Focal Points, Official Campaign Partners, Media Partner, Enterprise Europe Network (EEN OSH Ambassadors) */
