--- a/docroot/sites/all/themes/hwc_frontend/css/style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/style.css
@@ -8871,7 +8871,8 @@ div[class*='view-'] .field-name-field-summary {
 .form-item-field-publication-type,
 .form-item-field-priority-area,
 .form-item-languages,
-.form-item-field-msd-priority-area {
+.form-item-field-msd-priority-area,
+.form-item-main-publication-type {
   margin-top: 0;
   padding-top: 10px;
   margin-bottom: 0px;
@@ -8884,7 +8885,8 @@ div[class*='view-'] .field-name-field-summary {
 .form-item-field-publication-type .checkbox:last-child,
 .form-item-field-priority-area .checkbox:last-child,
 .form-item-languages .checkbox:last-child,
-.form-item-field-msd-priority-area .checkbox:last-child {
+.form-item-field-msd-priority-area .checkbox:last-child,
+.form-item-main-publication-type .checkbox:last-child {
   margin-bottom: 10px;
 }
 .form-item-main-tags > label,
@@ -8894,7 +8896,8 @@ div[class*='view-'] .field-name-field-summary {
 .form-item-relevant-for > label,
 .form-item-languages > label,
 .form-item-publication-type > label,
-.form-item-field-msd-priority-area > label {
+.form-item-field-msd-priority-area > label,
+.form-item-main-publication-type > label {
   font-size: 1.1em;
   font-weight: bold;
   width: 100%;
@@ -8909,7 +8912,8 @@ div[class*='view-'] .field-name-field-summary {
 .form-item-relevant-for > label:after,
 .form-item-languages > label:after,
 .form-item-publication-type > label:after,
-.form-item-field-msd-priority-area > label:after {
+.form-item-field-msd-priority-area > label:after,
+.form-item-main-publication-type > label:after {
   content: "\e250";
   font-family: "Glyphicons Halflings";
   margin-left: 10px;
@@ -8923,7 +8927,8 @@ div[class*='view-'] .field-name-field-summary {
 .form-item-relevant-for > label.active:after,
 .form-item-languages > label.active:after,
 .form-item-publication-type > label.active:after,
-.form-item-field-msd-priority-area > label.active:after {
+.form-item-field-msd-priority-area > label.active:after,
+.form-item-main-publication-type > label.active:after {
   content: "\e252";
   font-family: "Glyphicons Halflings";
   margin-left: 10px;
