--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -2555,7 +2555,7 @@ div.publications-detail-right-column > a.download{
   }
 }
 
-#edit-field-publication-type, #edit-main-tags, #edit-field-msd-priority-area{
+#edit-field-publication-type, #edit-main-tags, #edit-field-msd-priority-area, #edit-main-publication-type{
 	> div > label{
 		font-size: 1.8rem;
   		color: #003399 !important;
@@ -2567,7 +2567,7 @@ div.publications-detail-right-column > a.download{
 }
 
 html:lang(de){
-	#edit-field-publication-type, #edit-main-tags, #edit-field-msd-priority-area{
+	#edit-field-publication-type, #edit-main-tags, #edit-field-msd-priority-area, #edit-main-publication-type{
 		> div > label{
 			font-size: 1.5rem;
 	  	}
