REL-2043 RELEASE PRD HWC2022 - 16/12/2020

--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -1455,6 +1455,19 @@ input[type="checkbox"]:checked + label .my-checkbox:after {
   justify-content: center;
   padding-bottom: 20px;
 }
+/* MHWC-525 - New Design for Partners' profile */
+body.fop .page_title,
+body.ocp .page_title,
+body.mp .page_title,
+body.een .page_title {
+  margin-bottom: 0;
+}
+body.fop .hwc-share-widget,
+body.ocp .hwc-share-widget,
+body.mp .hwc-share-widget,
+body.een .hwc-share-widget {
+  margin-top: 2em;
+}
 .front .page_title {
   margin-bottom: 0;
 }
@@ -3194,6 +3207,25 @@ div.workbench-info-block {
   font-style: normal;
   color: #FFF;
 }
+body.mp .pane-node-field-pledge {
+  background: url('../images/background-fop.png') no-repeat;
+  background-size: cover;
+  margin-top: 1em;
+  border-radius: 15px;
+  margin-bottom: 1em;
+}
+body.mp .pane-node-field-pledge .pane-title {
+  color: #FFF;
+  font-size: 1.4em;
+  padding-left: 20px;
+  padding-top: 15px;
+  font-style: normal;
+}
+body.mp .pane-node-field-pledge .pane-content {
+  padding: 10px 20px 20px 20px;
+  font-style: normal;
+  color: #FFF;
+}
 .panels-flexible-row .hwc-share-widget {
   float: right;
 }
@@ -3210,12 +3242,20 @@ div.workbench-info-block {
   border: 2px solid #bcd75b;
   border-radius: 7px;
 }
+.field-name-field-general-phone {
+  padding-top: 5px;
+}
+.field-name-field-website a {
+  font-weight: bold !important;
+  font-size: 1.2em;
+}
 .panels-flexible-column-inside-first {
   /* panels-flexible-column-inside-first Header panel*/
   /*panels-flexible-column-inside-first Footer panel*/
 }
 .panels-flexible-column-inside-first .panels-flexible-region-first {
   float: left;
+  width: auto;
   padding-right: 1em;
 }
 .panels-flexible-column-inside-first > div:nth-child(1) {
@@ -3234,8 +3274,17 @@ div.workbench-info-block {
   float: left;
   width: 60%;
 }
+.panels-flexible-column-inside-first .profile-col-left-middle-2 .field-name-field-country .field-item {
+  padding-top: 25px;
+}
+.ocp .panels-flexible-column-inside-first .panels-flexible-region-first {
+  float: none;
+  width: 100%;
+  padding-right: 1em;
+}
 .panels-flexible-region .pane-node-field-main-contact {
   clear: both;
+  padding-top: 1em;
 }
 .panels-flexible-region .field-name-field-abbreviation-name,
 .panels-flexible-region .field-name-field-orgtype,
@@ -3256,10 +3305,6 @@ div.workbench-info-block {
 }
 .panels-flexible-region .pane-node-field-ph-address {
   padding-top: 1em;
-}
-.panels-flexible-region .pane-node-field-general-phone,
-.panels-flexible-region .pane-node-field-organisation-rep {
-  padding-top: 10px;
 }
 .panels-flexible-region .pane-node-field-general-phone .pane-title,
 .panels-flexible-region .pane-node-field-organisation-rep .pane-title {
@@ -3345,10 +3390,6 @@ div.workbench-info-block {
 .panels-flexible-column-last .pane-node-field-country {
   padding-top: 1em;
 }
-.panels-flexible-column-last .field-name-field-website {
-  padding-top: 10px;
-  padding-bottom: 10px;
-}
 .panels-flexible-column-last .field-type-link-field a {
   white-space: nowrap;
   width: 280px;
@@ -3358,7 +3399,6 @@ div.workbench-info-block {
 .node-type-partner [class*="field-type-link"] {
   font-weight: bold;
   text-align: left;
-  margin: 0.1rem 0 !important;
 }
 .node-type-partner [class*="field-type-link"][class*="facebook"] {
   background: url("../images/header/header-ico-facebook.png") no-repeat left center;
@@ -3506,12 +3546,143 @@ body.ocp .box-type-partner .pane-node-field-quote {
   clear: both;
   padding-left: 10px;
 }
-body.ocp .panels-flexible-row-partner_detail-16-inside .panels-flexible-region-first,
+body.ocp .panels-flexible-row-partner_detail-16-inside .panels-flexible-region-first {
+  float: right;
+  padding-right: 0;
+}
+body.ocp .pane-node-field-orgtype .pane-title {
+  float: left;
+  text-transform: uppercase;
+  border: 2px solid #d9e996;
+  border-radius: 5px;
+  padding: 3px 8px;
+  color: #003399;
+  font-weight: 600;
+  margin-right: 10px;
+  margin-bottom: 10px;
+}
+body.ocp .pane-node-field-orgtype .pane-content {
+  float: left;
+  color: #333;
+}
+body.ocp .pane-node-field-orgtype .pane-content .field-name-field-orgtype {
+  padding-top: 4px;
+  font-weight: normal;
+}
+body.ocp .pane-node-field-bussines-sector {
+  float: right;
+  padding-top: 0 !important;
+  margin-right: 2em;
+  clear: none;
+  display: flex;
+  flex-wrap: nowrap;
+}
+body.ocp .pane-node-field-bussines-sector .pane-title {
+  float: left;
+  text-transform: uppercase;
+  border: 2px solid #d9e996;
+  border-radius: 5px;
+  padding: 3px 8px;
+  color: #003399;
+  font-weight: 600;
+  margin-right: 10px;
+  display: flex;
+  align-items: center;
+}
+body.ocp .pane-node-field-bussines-sector .pane-content {
+  float: left;
+  color: #333;
+}
+body.ocp .pane-node-field-bussines-sector .pane-content .field-type-taxonomy-term-reference {
+  padding-top: 4px;
+  font-weight: normal;
+}
+body.ocp .panels-flexible-column-first .field-name-field-country img {
+  border: 0;
+  width: 110px;
+  height: 110px;
+  margin-top: -17px;
+}
+body.ocp .panels-flexible-column-first .pane-node-field-mission-statement,
+body.ocp .panels-flexible-column-first .pane-node-field-pledge {
+  background: transparent;
+  background-size: initial;
+  margin-top: 0;
+  border-radius: 15px;
+  margin-bottom: 0;
+}
+body.ocp .panels-flexible-column-first .pane-node-field-mission-statement .pane-title,
+body.ocp .panels-flexible-column-first .pane-node-field-pledge .pane-title {
+  float: none;
+  color: #003399;
+  font-weight: 500;
+  font-size: 1.5em;
+  padding: 0 0 10px 0;
+}
+body.ocp .panels-flexible-column-first .pane-node-field-mission-statement .pane-content,
+body.ocp .panels-flexible-column-first .pane-node-field-pledge .pane-content {
+  padding: 1em;
+  padding-left: 1em;
+  padding-right: 1em;
+  font-style: normal;
+  color: #000;
+  padding: 0;
+}
+body.ocp .panels-flexible-column-first .pane-node-field-mission-statement {
+  margin: 2rem 0 2rem 10px;
+}
+body.ocp .panels-flexible-column-last .pane-node-field-country {
+  padding: 1rem 0;
+  display: flex;
+}
+body.ocp .panels-flexible-column-last .pane-node-field-website .field-type-link-field a {
+  font-style: normal;
+  width: auto;
+}
+body.ocp .panels-flexible-column-last .pane-node-field-website .field-type-link-field a[target="_blank"]:after {
+  background-image: url(../images/target-blank.png);
+  background-size: 1rem 1rem;
+  display: inline-block;
+  width: 1rem;
+  height: 1rem;
+  content: "";
+  left: 0.5rem;
+  position: relative;
+}
+body.ocp .panels-flexible-column-last .pane-node-title-field,
+body.ocp .panels-flexible-column-last .pane-node-title {
+  margin-top: 1.8rem;
+}
+body.ocp .panels-flexible-column-last .pane-node-field-general-phone {
+  padding: 0;
+}
+body.ocp .panels-flexible-column-last .pane-node-field-general-phone .pane-title {
+  float: none;
+  padding: 0;
+  font-weight: normal;
+}
+body.ocp .panels-flexible-column-last .pane-node-field-general-phone .pane-content {
+  float: none;
+  padding: 0;
+}
+body.ocp .panels-flexible-column-last .field-name-title-field {
+  font-weight: normal;
+}
+body.ocp .panels-flexible-column-last .pane-node-field-ph-address {
+  padding-top: 0;
+}
+body.ocp .panels-flexible-column-last .pane-node-field-country {
+  padding: 0;
+}
+body.ocp .panels-flexible-column-last .pane-node-field-country .field-name-field-country {
+  padding: 0;
+  font-size: 1.4rem;
+  color: #000;
+}
 body.mp .panels-flexible-row-partner_detail-16-inside .panels-flexible-region-first {
   float: right;
   padding-right: 0;
 }
-body.ocp .pane-node-field-orgtype .pane-title,
 body.mp .pane-node-field-orgtype .pane-title {
   float: left;
   text-transform: uppercase;
@@ -3523,17 +3694,14 @@ body.mp .pane-node-field-orgtype .pane-title {
   margin-right: 10px;
   margin-bottom: 10px;
 }
-body.ocp .pane-node-field-orgtype .pane-content,
 body.mp .pane-node-field-orgtype .pane-content {
   float: left;
   color: #333;
 }
-body.ocp .pane-node-field-orgtype .pane-content .field-name-field-orgtype,
 body.mp .pane-node-field-orgtype .pane-content .field-name-field-orgtype {
   padding-top: 4px;
   font-weight: normal;
 }
-body.ocp .pane-node-field-bussines-sector,
 body.mp .pane-node-field-bussines-sector {
   float: right;
   padding-top: 0 !important;
@@ -3542,7 +3710,6 @@ body.mp .pane-node-field-bussines-sector {
   display: flex;
   flex-wrap: nowrap;
 }
-body.ocp .pane-node-field-bussines-sector .pane-title,
 body.mp .pane-node-field-bussines-sector .pane-title {
   float: left;
   text-transform: uppercase;
@@ -3555,73 +3722,28 @@ body.mp .pane-node-field-bussines-sector .pane-title {
   display: flex;
   align-items: center;
 }
-body.ocp .pane-node-field-bussines-sector .pane-content,
 body.mp .pane-node-field-bussines-sector .pane-content {
   float: left;
   color: #333;
 }
-body.ocp .pane-node-field-bussines-sector .pane-content .field-type-taxonomy-term-reference,
 body.mp .pane-node-field-bussines-sector .pane-content .field-type-taxonomy-term-reference {
   padding-top: 4px;
   font-weight: normal;
 }
-body.ocp .panels-flexible-column-first .field-name-field-country img,
 body.mp .panels-flexible-column-first .field-name-field-country img {
   border: 0;
   width: 110px;
   height: 110px;
   margin-top: -17px;
 }
-body.ocp .panels-flexible-column-first .pane-node-field-mission-statement,
-body.mp .panels-flexible-column-first .pane-node-field-mission-statement,
-body.ocp .panels-flexible-column-first .pane-node-field-pledge,
-body.mp .panels-flexible-column-first .pane-node-field-pledge {
-  background: transparent;
-  background-size: initial;
-  margin-top: 1em;
-  border-radius: 15px;
-  margin-bottom: 1em;
-}
-body.ocp .panels-flexible-column-first .pane-node-field-mission-statement .pane-title,
-body.mp .panels-flexible-column-first .pane-node-field-mission-statement .pane-title,
-body.ocp .panels-flexible-column-first .pane-node-field-pledge .pane-title,
-body.mp .panels-flexible-column-first .pane-node-field-pledge .pane-title {
-  float: none;
-  color: #003399;
-  font-weight: 500;
-  font-size: 1.5em;
-  padding: 0 0 10px 0;
-}
-body.ocp .panels-flexible-column-first .pane-node-field-mission-statement .pane-content,
-body.mp .panels-flexible-column-first .pane-node-field-mission-statement .pane-content,
-body.ocp .panels-flexible-column-first .pane-node-field-pledge .pane-content,
-body.mp .panels-flexible-column-first .pane-node-field-pledge .pane-content {
-  padding: 1em;
-  padding-left: 1em;
-  padding-right: 1em;
-  font-style: normal;
-  color: #000;
-  padding: 0;
-}
-body.ocp .panels-flexible-column-first .pane-node-field-mission-statement,
-body.mp .panels-flexible-column-first .pane-node-field-mission-statement {
-  margin: 2rem 0 2rem 10px;
-}
-body.ocp .panels-flexible-column-last .pane-node-field-country,
 body.mp .panels-flexible-column-last .pane-node-field-country {
   padding: 1rem 0;
   display: flex;
 }
-body.ocp .panels-flexible-column-last .pane-node-field-website .field-type-link-field,
-body.mp .panels-flexible-column-last .pane-node-field-website .field-type-link-field {
-  padding: 1em 0 1rem 0;
-}
-body.ocp .panels-flexible-column-last .pane-node-field-website .field-type-link-field a,
 body.mp .panels-flexible-column-last .pane-node-field-website .field-type-link-field a {
   font-style: normal;
   width: auto;
 }
-body.ocp .panels-flexible-column-last .pane-node-field-website .field-type-link-field a[target="_blank"]:after,
 body.mp .panels-flexible-column-last .pane-node-field-website .field-type-link-field a[target="_blank"]:after {
   background-image: url(../images/target-blank.png);
   background-size: 1rem 1rem;
@@ -3632,44 +3754,31 @@ body.mp .panels-flexible-column-last .pane-node-field-website .field-type-link-f
   left: 0.5rem;
   position: relative;
 }
-body.ocp .panels-flexible-column-last .field-type-link-field,
-body.mp .panels-flexible-column-last .field-type-link-field {
-  margin-bottom: 0.5rem;
-}
-body.ocp .panels-flexible-column-last .pane-node-title-field,
 body.mp .panels-flexible-column-last .pane-node-title-field,
-body.ocp .panels-flexible-column-last .pane-node-title,
 body.mp .panels-flexible-column-last .pane-node-title {
   margin-top: 1.8rem;
 }
-body.ocp .panels-flexible-column-last .pane-node-field-general-phone,
 body.mp .panels-flexible-column-last .pane-node-field-general-phone {
   padding: 0;
 }
-body.ocp .panels-flexible-column-last .pane-node-field-general-phone .pane-title,
 body.mp .panels-flexible-column-last .pane-node-field-general-phone .pane-title {
   float: none;
   padding: 0;
   font-weight: normal;
 }
-body.ocp .panels-flexible-column-last .pane-node-field-general-phone .pane-content,
 body.mp .panels-flexible-column-last .pane-node-field-general-phone .pane-content {
   float: none;
   padding: 0;
 }
-body.ocp .panels-flexible-column-last .field-name-title-field,
 body.mp .panels-flexible-column-last .field-name-title-field {
   font-weight: normal;
 }
-body.ocp .panels-flexible-column-last .pane-node-field-ph-address,
 body.mp .panels-flexible-column-last .pane-node-field-ph-address {
   padding-top: 0;
 }
-body.ocp .panels-flexible-column-last .pane-node-field-country,
 body.mp .panels-flexible-column-last .pane-node-field-country {
   padding: 0;
 }
-body.ocp .panels-flexible-column-last .pane-node-field-country .field-name-field-country,
 body.mp .panels-flexible-column-last .pane-node-field-country .field-name-field-country {
   padding: 0;
   font-size: 1.4rem;
@@ -3744,7 +3853,7 @@ body.fop .panels-flexible-column-first .pane-node-field-bussines-sector {
   padding-top: 0.3rem;
 }
 body.fop .panels-flexible-column-first .pane-node-field-mission-statement {
-  margin: 2rem 0 2rem 0;
+  margin: 1.5rem 0 0 0;
 }
 body.fop .panels-flexible-column-last .pane-node-field-country {
   padding: 1rem 0 0;
@@ -3753,9 +3862,6 @@ body.fop .panels-flexible-column-last .pane-node-field-country {
 body.fop .panels-flexible-column-last .pane-node-field-country .field-item {
   font-size: 2rem;
   font-weight: 600;
-}
-body.fop .panels-flexible-column-last .pane-node-field-website .field-type-link-field {
-  padding: 0 0 1rem 0;
 }
 body.fop .panels-flexible-column-last .pane-node-field-website .field-type-link-field a {
   font-style: normal;
@@ -3770,6 +3876,9 @@ body.fop .panels-flexible-column-last .pane-node-field-website .field-type-link-
   content: "";
   left: 0.5rem;
   position: relative;
+}
+body.een .panels-flexible-row h2 {
+  padding-bottom: 20px;
 }
 body.een .panels-flexible-column-first .field-name-field-country img {
   border: 0;
@@ -3813,7 +3922,7 @@ body.een .panels-flexible-column-first .pane-node-field-bussines-sector {
   padding-top: 0.8rem;
 }
 body.een .panels-flexible-column-first .pane-node-field-mission-statement {
-  margin: 5rem 0 2rem 10px;
+  margin-top: 5px;
 }
 body.een .panels-flexible-column-last .pane-node-field-country {
   padding: 1rem 0 0;
@@ -3827,7 +3936,6 @@ body.een .panels-flexible-column-last .pane-node-field-general-phone {
   padding: 0;
 }
 body.een .panels-flexible-column-last .pane-node-field-website .field-type-link-field {
-  padding: 0;
   clear: both;
 }
 body.een .panels-flexible-column-last .pane-node-field-website .field-type-link-field a {
@@ -3858,6 +3966,10 @@ body.een .panels-flexible-row-partner_detail-13 {
   float: right;
   width: 100%;
 }
+.mp-country .field-item {
+  width: 200px;
+  padding-top: 12px;
+}
 body.mp .panels-flexible-row h2,
 body.fop .panels-flexible-row h2,
 body.een .panels-flexible-row h2 {
@@ -3879,6 +3991,13 @@ body.fop .box-type-partner,
 body.een .box-type-partner {
   width: 100%;
   margin-left: 10px;
+}
+body.mp .box-type-partner {
+  width: 100%;
+  margin-left: 10px;
+}
+body.mp .box-type-partner .hwc-share-widget {
+  padding-right: 10px;
 }
 body.ocp .panels-flexible-row h2 {
   font-weight: 600;
@@ -7834,7 +7953,6 @@ body.mp .panels-flexible-column-first .pane-node-field-country {
 }
 body.mp .panels-flexible-column-first .pane-node-field-country.profile-inline-field {
   float: left;
-  min-height: 11rem;
   padding-right: 1em;
 }
 body.mp .panels-flexible-column-first .pane-node-field-country.profile-inline-field .field-name-field-country img {
@@ -7872,33 +7990,11 @@ body.mp .panels-flexible-column-first .pane-node-field-ceo .pane-title {
   padding-right: 1.5rem;
   font-weight: bold;
 }
-body.mp .panels-flexible-column-first .pane-node-field-mission-statement,
-body.mp .panels-flexible-column-first .pane-node-field-pledge {
-  background: transparent;
-  background-size: initial;
-  margin-top: 1em;
-  border-radius: 15px;
-  margin-bottom: 1em;
-}
-body.mp .panels-flexible-column-first .pane-node-field-mission-statement .pane-title,
-body.mp .panels-flexible-column-first .pane-node-field-pledge .pane-title {
-  float: none;
-  color: #003399;
-  font-weight: 600;
-  font-size: 1.5em;
-  padding: 0 0 10px 0;
-}
-body.mp .panels-flexible-column-first .pane-node-field-mission-statement .pane-content,
-body.mp .panels-flexible-column-first .pane-node-field-pledge .pane-content {
-  padding: 1em;
-  padding-left: 1em;
-  padding-right: 1em;
-  font-style: normal;
-  color: #000;
-  padding: 0;
-}
 body.mp .panels-flexible-column-first .pane-node-field-mission-statement {
   margin: 2rem 0 2rem 10px;
+}
+.pane-node-field-logo {
+  height: 220px!important;
 }
 /* MHWC-39 - For UX next step */
 aside.col-md-3 .region.region-sidebar-first.well {
@@ -11044,6 +11140,9 @@ body.page-node-253 #block-hwc-partner-hwc-partner-back-to-private-zone .breadcru
   .node-type-frontpage-slider .main-container .col-md-6 .field-name-body {
     height: auto;
   }
+  .panels-flexible-column-inside-first .profile-col-left-middle-2 .field-name-field-country .field-item {
+    padding-top: 0;
+  }
 }
 @media (max-width: 767px) {
   body.front-page .main-container {
@@ -12090,6 +12189,14 @@ body.page-node-253 #block-hwc-partner-hwc-partner-back-to-private-zone .breadcru
   #block-views-news-press-room .more-link a {
     font-size: 0.85em;
     background: url(../images/ico-plus-20.png) no-repeat 99.5% 1px #0030a0;
+  }
+  body.mp .panels-flexible-column-first .pane-node-field-ceo {
+    width: 100%;
+    padding-left: 10px;
+  }
+  body.mp .panels-flexible-column-first .pane-node-field-country.mp-country .field-item {
+    padding-top: 0;
+    padding-left: 10px;
   }
 }
 @media (max-width: 370px) {
