--- a/docroot/sites/all/themes/hwc_frontend/less/content.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/content.less
@@ -7481,7 +7481,7 @@ html:lang(hu) , html:lang(nl), html:lang(mt) {
 	}
 	#edit-actions{
 		width: 100%;
-		margin-top: 30px;
+		margin-top: 0;
 	}
 	.form-type-select {
 		position: relative;
@@ -7520,8 +7520,8 @@ html:lang(hu) , html:lang(nl), html:lang(mt) {
 		height: inherit !important;
 	}
 	button{
-		width: 100%;
-		background: @bg-color-2 url(../images/content/arrow-right-blue-bg-white.png) no-repeat right center;
+		width: auto;
+		background: @bg-color-2;
 	}
 }
 fieldset.captcha {
