--- a/docroot/sites/all/themes/hwc_frontend/less/content.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/content.less
@@ -7514,6 +7514,7 @@ html:lang(hu) , html:lang(nl), html:lang(mt) {
 			box-sizing: border-box;
 			width: 84%;
 			cursor: pointer;
+			border:1px solid @bg-color-2;
 		}
 	}
 	.form-type-textarea{
