--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -3086,7 +3086,7 @@ div.workbench-info-block {
 .view-id-partners_list .col-md-2.col-sm-3.col-xs-6 .views-field-field-logo span.title-box-content {
   display: flex;
   justify-content: center;
-  padding: 0 5px 0 5px;
+  padding: 10px 5px 0 5px;
 }
 .page-campaign-partners-national-focal-points .col-md-2.col-sm-3.col-xs-6 {
   min-height: auto !important;
@@ -3161,7 +3161,7 @@ div.workbench-info-block {
 .page-national-focal-points .view-id-partners_list .views-row .views-field-name-field,
 .page-campaign-partners-campaign-media-partners .view-id-partners_list .views-row .views-field-name-field,
 .page-campaign-partners-enterprise-europe-network .view-id-partners_list .views-row .views-field-name-field {
-  margin-top: 0;
+  margin-top: 10px;
 }
 .page-national-focal-points .view-content {
   display: flex;
