--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -3544,7 +3544,7 @@ div.workbench-info-block{
 			span.title-box-content{
 				display: flex;
 				justify-content: center;
-				padding: 0 5px 0 5px;
+				padding: 10px 5px 0 5px;
 			}
 		}
 	}	
@@ -3632,7 +3632,7 @@ div.workbench-info-block{
 				min-height: auto;
 			}
 			.views-field-name-field{
-				margin-top: 0;	
+				margin-top: 10px;	
 			}
 		}
 	}
