MDR-4066 - glossary terms - highlight only the first time it appears

--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -8755,7 +8755,7 @@ html:lang(el){
 }
 
 /* MDR-4066 - glossary terms - highlight only the first time it appears*/
-.node-type-news{
+.node-type-news, .node-type-press-release{
 	.field-name-field-summary{
 		.lexicon-term{
 			border-bottom: 0 !important;
