REL-2108 RELEASE PRD HWC20 - 27/01/2020

--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -8754,6 +8754,25 @@ html:lang(el){
     }
 }
 
+/* MDR-4066 - glossary terms - highlight only the first time it appears*/
+.node-type-news, .node-type-press-release{
+	.field-name-field-summary{
+		.lexicon-term{
+			border-bottom: 0 !important;
+		    color: #59595A !important;
+		    cursor: text !important;
+		    &:hover{
+		    	text-decoration: none;
+		    	border-bottom: 0;
+		    }
+		}
+		.popup{
+			display: none !important;
+		}
+	}
+}
+
+
 .popup{
 	position: relative;
 	background: #FFF;
