--- a/docroot/sites/all/themes/hwc_frontend/less/content.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/content.less
@@ -6207,6 +6207,18 @@ html:lang(hu) , html:lang(nl), html:lang(mt) {
 	}
 }
 
+.logged-in.page-node-add-news, .logged-in.node-type-news, .logged-in.node-type-events{
+	#block-hwc-partner-hwc-partner-private-zone-gpep{
+		.breadcrumb{
+			padding-top: 0;
+			padding-left: 84px;
+		}
+	}
+	#edit-send-for-approval{
+		margin-bottom: 1em;
+	}
+}
+
 .page-node-add-events{
 	#block-hwc-partner-hwc-partner-private-zone-gpep{
 		.breadcrumb{
